--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.snk
+TableNames.cs
+MessageNames.cs
+.xrm/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
